--- a/client/src/app.css
+++ b/client/src/app.css
@@ -97,8 +97,12 @@ form input {
 
 form button {
   padding: 8px 10px;
-  font-size: clamp(1rem, 1.6vw, 1.2rem);
+  font-size: clamp(1rem, 1.6vw, 1.3rem);
   border-radius: 40px;
   font-weight: bold;
   cursor: pointer;
+  background: var(--light-blue);
+}
+.form-container p {
+  color: var(--rough-black);
 }
