Changes some things and fixed couple of bugs

--- a/client/src/components/adminComponent/patientList.css
+++ b/client/src/components/adminComponent/patientList.css
@@ -9,3 +9,10 @@
   display: grid;
   grid-template-columns: 1.4fr 0.5fr 1fr 1.4fr 1.4fr;
 }
+.patients-container .container-title {
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: bold;
+}
+.patients-container p {
+  margin: 15px 0;
+}
