--- a/client/src/components/popUp/popup.css
+++ b/client/src/components/popUp/popup.css
@@ -14,6 +14,7 @@
   position: absolute;
   z-index: 1;
   place-items: center;
+  overflow: hidden;
 }
 .popup-container {
   width: min(100% - 25px, 500px);
