--- a/client/src/components/adminComponent/patientList.css
+++ b/client/src/components/adminComponent/patientList.css
@@ -5,6 +5,16 @@
   --dirty-white: #efefef;
   --rough-black: #2e2e2e;
 }
+.list-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  height: 100svh;
+}
+.list-content {
+  width: 100%;
+  padding: 0 15px;
+}
 .patients-container {
   display: grid;
   grid-template-columns: 1.4fr 0.5fr 1fr 1.4fr 1.4fr;
