--- a/client/src/components/css/clinic.css
+++ b/client/src/components/css/clinic.css
@@ -19,7 +19,7 @@
   background: var(--light-blue);
   height: 100%;
   width: 200px;
-  padding: 20px 0;
+  padding: 20px 10px;
 }
 .clinic-nav ul {
   list-style: none;
