--- a/client/src/components/css/createClinic.css
+++ b/client/src/components/css/createClinic.css
@@ -5,8 +5,30 @@
   --dirty-white: #efefef;
   --rough-black: #2e2e2e;
 }
+.logo-container {
+  display: flex;
+  flex-direction: column;
+}
 .logo-container .logo {
   aspect-ratio: 1/1;
   width: 200px;
   border-radius: 50%;
+  cursor: pointer;
+}
+.background-image {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.background-image img {
+  aspect-ratio: 5/2;
+  height: 260px;
+}
+.pair-elements {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+}
+.pair-elements .form-element {
+  width: 100%;
 }
