--- a/client/src/components/adminComponent/updateService/updateService.css
+++ b/client/src/components/adminComponent/updateService/updateService.css
@@ -1,3 +1,11 @@
+:root {
+  --light-blue: #87d3f0;
+  --grayish-blue: #5ca7c3;
+  --dark-blue: #236078;
+  --dirty-white: #efefef;
+  --rough-black: #2e2e2e;
+}
+
 .update-service-container {
   height: 100svh;
   position: fixed;
@@ -5,4 +13,44 @@
   z-index: 999;
   display: grid;
   place-items: center;
+  width: 100%;
+}
+.update-service-container form {
+  background: var(--dirty-white);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+  border-radius: 35px;
+  width: min(100% - 25px, 700px);
+}
+.form-header img {
+  cursor: pointer;
+  aspect-ratio: 1/1;
+  width: 50px;
+}
+.image-logo-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.image-logo-container img {
+  aspect-ratio: 1/1;
+  width: 80px;
+}
+.image-logo-container p {
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
+}
+.bgImage-container {
+  display: flex;
+  flex-direction: column;
+}
+.bgImage-container img {
+  aspect-ratio: 5/2;
+  height: 150px;
+}
+.service-elements {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
