--- a/client/src/components/popUp/popup.css
+++ b/client/src/components/popUp/popup.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100svh;
   background: #00000090;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   place-items: center;
   overflow: hidden;
