--- a/client/src/components/patientComponents/viewAppointment.css
+++ b/client/src/components/patientComponents/viewAppointment.css
@@ -5,3 +5,13 @@
   --dirty-white: #efefef;
   --rough-black: #2e2e2e;
 }
+.flex-table {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr 1fr 0.5fr 0.5fr;
+  gap: 10px;
+  margin: 10px 0;
+}
+.flex-table.title {
+  background-color: var(--light-blue);
+  font-size: clamp(1rem, 2vw, 1.5rem);
+}
