--- a/client/src/components/appointment/appointment.css
+++ b/client/src/components/appointment/appointment.css
@@ -33,3 +33,11 @@
   width: 100%;
   padding: 5px;
 }
+.right-container .pair-elements {
+  display: flex;
+  justify-content: start;
+  margin: 10px 0;
+}
+.right-container .pair-elements input {
+  width: 100%;
+}
