changes some things

--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -43,3 +43,9 @@ nav ul li {
   height: 50px;
   display: block;
 }
+.profile-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+}
