--- a/client/src/components/adminComponent/getServices/getServices.css
+++ b/client/src/components/adminComponent/getServices/getServices.css
@@ -1,4 +1,4 @@
-.services-wrapper {
+.services-admin-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: start;
@@ -6,5 +6,9 @@
 }
 .services-content {
   width: 100%;
+  height: 100svh;
   padding: 10px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 }
