--- a/client/src/components/patientComponents/viewClinics.css
+++ b/client/src/components/patientComponents/viewClinics.css
@@ -6,7 +6,41 @@
   row-gap: 20px;
 }
 .clinic-wrapper {
-  border: 1px solid #000;
   cursor: pointer;
   color: #000;
+  background: #fff;
+  width: max(270px, 50%);
+  max-width: 100%;
+  height: 150px;
+  box-shadow: 0 0 10px #00000015;
+  border-radius: 15px;
+}
+.image-wrapper {
+  display: flex;
+  gap: 20px;
+  padding: 20px 10px;
+  align-items: center;
+}
+.image-wrapper img {
+  aspect-ratio: 1/1;
+  width: 30px;
+}
+.image-wrapper h1 {
+  font-size: clamp(1rem, 2vw, 1.2rem);
+  text-transform: capitalize;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.location-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 0 10px;
+}
+.location-container img {
+  aspect-ratio: 1/1;
+  width: 20px;
+}
+.location-container p {
+  font-size: 0.75rem;
+  color: gray;
 }
