make the search clickable to go to the clinic

--- a/client/src/components/patientComponents/searchClinic/searchClinics.css
+++ b/client/src/components/patientComponents/searchClinic/searchClinics.css
@@ -31,6 +31,7 @@
 .data-container .data-wrapper {
   padding: 10px;
   cursor: pointer;
+  color: var(--rough-black);
 }
 .data-wrapper .img-container {
   display: flex;
