--- a/client/src/components/patientComponents/searchClinic/searchClinics.css
+++ b/client/src/components/patientComponents/searchClinic/searchClinics.css
@@ -20,6 +20,7 @@
   max-width: 300px;
   border-radius: 24px;
   font-size: 1rem;
+  width: 100%;
 }
 .search-content .data-container {
   position: absolute;
@@ -42,4 +43,10 @@
 .img-container img {
   aspect-ratio: 1/1;
   width: 50px;
+}
+
+@media (max-width: 600px) {
+  .search-content input {
+    width: 100%;
+  }
 }
