--- a/client/src/components/patientComponents/viewClinics.css
+++ b/client/src/components/patientComponents/viewClinics.css
@@ -4,19 +4,20 @@
   margin: 30px auto;
   gap: 30px;
   row-gap: 20px;
+  width: 100%;
 }
-.clinic-wrapper {
+.clinic-view-wrapper {
   cursor: pointer;
   color: #000;
   background: #fff;
-  width: max(270px, 50%);
-  max-width: 100%;
+
   height: 150px;
   box-shadow: 0 0 10px #00000015;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 100%;
 }
 .clinic-wrapper:hover {
   box-shadow: 0 0 10px #00ff0080;
