--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -85,6 +85,7 @@ nav ul li {
   padding: 0 20px;
   gap: 20px;
   cursor: pointer;
+  border-bottom: 1px var(--light-blue) solid;
 }
 .hide-container ul li img {
   aspect-ratio: 1/1;
