--- a/client/src/components/patientComponents/searchClinic/searchClinics.css
+++ b/client/src/components/patientComponents/searchClinic/searchClinics.css
@@ -16,11 +16,10 @@
 }
 .search-content input {
   padding: 10px;
-  width: 350px;
+  width: 400px;
   max-width: 300px;
   border-radius: 24px;
   font-size: 1rem;
-  width: 100%;
 }
 .search-content .data-container {
   position: absolute;
@@ -28,6 +27,7 @@
   background: #fff;
   z-index: 1;
   border-radius: 10px;
+  box-shadow: 0 0 10px #00000015;
 }
 .data-container .data-wrapper {
   padding: 10px;
