--- a/client/src/components/patientComponents/viewService/viewServices.css
+++ b/client/src/components/patientComponents/viewService/viewServices.css
@@ -54,13 +54,47 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 265px;
-  border: 1px solid #000;
+  width: 240px;
   padding: 5px;
   border-radius: 15px;
   color: var(--rough-black);
   align-items: stretch;
   height: 265px;
+  background: #fff;
+  box-shadow: 0 0 10px #00000015;
+  position: relative;
+  overflow: hidden;
+}
+.service-wrapper .visit-now {
+  position: absolute;
+  width: 100%;
+  background: var(--light-blue);
+  bottom: -20%;
+  left: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  color: var(--rough-black);
+  transition: 0.5s ease;
+}
+.service-wrapper:hover .visit-now {
+  bottom: 0;
+  transition: 0.5s ease;
+}
+.service-wrapper .bg-image {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 90px;
+}
+.service-wrapper .bg-image img {
+  border-radius: 0%;
+  object-fit: cover;
+  width: 100%;
+  height: 90px;
 }
 .service-name-container {
   display: flex;
@@ -68,13 +102,16 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  flex-direction: column;
+  z-index: 1;
 }
 .service-name-container h1 {
   font-size: 1.3rem;
 }
 .service-wrapper img {
   aspect-ratio: 1/1;
-  height: 100px;
+  height: 70px;
+  border-radius: 50%;
 }
 .services-main {
   padding: 20px 0;
