--- a/client/src/components/adminComponent/showMedHistory/showMed.css
+++ b/client/src/components/adminComponent/showMedHistory/showMed.css
@@ -10,7 +10,7 @@
   z-index: 1;
 }
 .show-med-container .show-med-wrapper {
-  width: min(100% - 20px, 500px);
+  width: min(100% - 20px, 600px);
   background: var(--dirty-white);
   padding: 10px;
 }
@@ -20,4 +20,16 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+}
+.show-med-container .show-med-wrapper header h3 {
+  color: red;
+  cursor: pointer;
+}
+.show-med-container .show-med-wrapper .show-med-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.show-med-container .show-med-wrapper .show-med-content .question-element {
+  margin: 10px 0;
 }
