--- a/client/src/components/css/login.css
+++ b/client/src/components/css/login.css
@@ -18,3 +18,14 @@
   background: var(--rough-black);
   color: var(--light-blue);
 }
+.input-error {
+  border: red 2px solid;
+}
+.error {
+  color: #fff;
+  width: 100%;
+  background: #b22222;
+  margin: 10px 0;
+  padding: 5px;
+  border-left: 7px solid red;
+}
