--- a/client/src/components/serviceDetails/serviceInfo/serviceInfo.css
+++ b/client/src/components/serviceDetails/serviceInfo/serviceInfo.css
@@ -14,12 +14,14 @@
   justify-content: space-evenly;
   align-items: center;
   color: var(--rough-black);
+  line-height: 2rem;
 }
 .service-info-container .service-info-content {
   display: flex;
   flex-direction: column;
   align-items: start;
   gap: 30px;
+  width: 600px;
 }
 .service-info-container .service-info-content h1 {
   font-size: clamp(1.2rem, 3vw, 2rem);
