--- a/client/src/components/patientComponents/homeContent/homeContent.css
+++ b/client/src/components/patientComponents/homeContent/homeContent.css
@@ -123,7 +123,7 @@ div.links {
 
 div.links a {
   flex: 1; /* Ensures children grow equally */
-  padding: 25px;
+  padding: 5px;
   background-color: #f8f8f8;
   margin: 0;
   border-radius: 25px;
@@ -290,4 +290,10 @@ section.faqs div.links div {
 section.faqs div.links div p {
   font-size: 26px;
   font-weight: var(--medium);
+}
+
+@media (max-width: 650px) {
+  div.links {
+    flex-direction: column;
+  }
 }
