--- a/client/src/components/popUp/popup.css
+++ b/client/src/components/popUp/popup.css
@@ -6,7 +6,7 @@
   --rough-black: #2e2e2e;
 }
 
-.popup {
+.popups {
   display: grid;
   width: 100%;
   height: 100svh;
@@ -15,8 +15,9 @@
   z-index: 1;
   place-items: center;
   overflow: hidden;
+  top: 0;
 }
-.popup-container {
+.popups-container {
   width: min(100% - 25px, 500px);
   background: var(--dirty-white);
   border-radius: 10px;
