--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -103,10 +103,13 @@ nav ul li {
 }
 .red-dot {
   aspect-ratio: 1/1;
-  width: 15px;
-  height: 15px;
+  width: 12px;
+  height: 12px;
   background: red;
   border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 20%;
 }
 
 @media (max-width: 600px) {
